--- a/vscode.html
+++ b/vscode.html
@@ -109,5 +109,5 @@
 </div>
 <div class="menu">
     <a href="index.html">Vai alla Home</a>
-    <a href="book.html">Torna alla Home</a>
+    <a href="book.html">Elenco</a>
 </div>
