Update BookCrossing link to relative path

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
     <div class="menu">
-        <a href="https://soymystenyt.github.io/Bookcrossing-web/book.html">BookCrossing</a>
+        <a href="book.html">BookCrossing</a>
         <a href="vscode.html">Come è stato creato</a>
     </div>
 
